<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Reply"
    android:id="@+id/linlayout_reply_pm" >

    <TextView
        android:id="@+id/to_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_id_string"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/to_reply_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/betreff_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/betreff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/betreff_reply_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/text_id_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_id"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/text_reply_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxHeight="220dp" />
    
</TableLayout>